tests/golden/compile-fail/name_duplicate_module_fn.rua
mod service {
    fn duplicate() {}
    fn duplicate() {}
}
